1.Containers-VMs/1.3.Kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubetest
  labels:
    name: kubetest
