1.Containers-VMs/1.3.Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testkube
  namespace: kubetest
spec:
  type: NodePort
  selector:
    app: testpod
  ports:
    - port: 8080
