1.Containers-VMs/1.3.Kubernetes/servicev2.yaml
apiVersion: v1
kind: Service
metadata:
  name: testkube
  namespace: kubetest
spec:
  ports:
  - port: 8080
  selector:
    app: testpod
  type: ClusterIP
