1.Containers-VMs/1.3.Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: kubetest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kubetest.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testkube
                port:
                  number: 8080
